@@ -3,7 +3,7 @@ export( "J" )
 export( "%instanceof%" )
 export(is.jnull, .r2j, .rJava.base.path)
 exportClasses(jobjRef, jarrayRef, jfloat, jlong, jbyte, jchar, jclassName)
-exportMethods(show, "$", "$<-", "==", "!=", names, new, as.character)
+exportMethods(show, "$", "$<-", "==", "!=", names, new, as.character, length)
 importFrom(methods, new) 
 S3method(with, jobjRef)
 S3method(within, jobjRef)
